feat(upload): add file upload feature     - Added file upload endpoint     - Implemented file upload functionality     - Added validation for file types and sizes     - Added unit tests for upload functionality     - add mise tasks to show data, seed data

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -216,7 +216,7 @@
 						<configuration>
 							<excludes>
 								<!-- Exclure les classes générées -->
-								<exclude>**/mapper/*Impl.class</exclude>
+								<exclude>**/mapper/*.class</exclude>
 								<exclude>**/entities/*$*Builder.class</exclude>
 								<exclude>**/entities/*.class</exclude>
 								<exclude>**/dto/*.class</exclude>
@@ -247,7 +247,7 @@
 							</rules>
 							<excludes>
 								<!-- Exclure les classes générées -->
-								<exclude>**/mapper/*Impl.class</exclude>
+								<exclude>**/mapper/*.class</exclude>
 								<exclude>**/entities/*$*Builder.class</exclude>
 								<exclude>**/entities/*.class</exclude>
 								<exclude>**/dto/*.class</exclude>
