--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - API : 'api.md'
   - Tests: 'tests.md'
   - Troubleshoot: 'troubleshoot.md'
+  - Remarques: 'remarques.md'
 
 # Configuration
 theme:
