chore(mise): add application lifecycle management tasks
    - Add app:start task to start complete application (backend + frontend)
    - Add app:stop task to stop all services
    - Add app:check task to verify application health (renamed from app:health)
      * Check PostgreSQL container and readiness
      * Check backend health endpoint (actuator/health)
      * Check frontend availability
      * Use ss instead of lsof for better port detection
    - Add app:reset task to reset application and data
      * Interactive confirmation (yes/no)
      * Stop all services
      * Flush database and storage
    - Add app:showdata task to display database and storage contents
    - Add .env.cors support in backend:start task
      * Load CORS configuration from backend/.env.cors if present
      * Allows dynamic CORS origins configuration
    - Move showdata from root to app:showdata task
    - Update README.md with new app tasks section
      * Add Application complete section at top
      * Fix backend task names (backend:tests:all, backend:tests:coverage)

--- a/.mise/tasks/frontend/build
+++ b/.mise/tasks/frontend/build
@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-#MISE description="Build l'application frontend"
+#MISE description="Build l'application frontend pour la production"
 set -e
 
 echo "🏗️  Build de l'application frontend..."
@@ -7,13 +7,7 @@ echo "================================================================"
 
 cd frontend
 
-# installer les dépendances si nécessaire
-if [ ! -d "node_modules" ]; then
-    echo "📦 Installation des dépendances..."
-    npm install
-fi
-
-# Build
+# Build de production
 npm run build
 
 echo ""
@@ -21,3 +15,4 @@ echo "================================================================"
 echo "✅ Build terminé avec succès!"
 echo ""
 echo "📂 Emplacement: frontend/dist/"
+echo "📊 Fichiers optimisés pour la production"
