feat(upload): Implement frontend file upload with E2E tests
    - FileUploadModalComponent
      * Drag & drop with validation (max 1GB)
      * Form: optional password (min 6 chars), expiration (1-7 days)
      * Real-time progress bar (HttpEventType.UploadProgress)
      * Explicit error messages (401/400/413/500)
      * Material Design modal with animations
      * UI states: empty/success/error

    - JWT AuthInterceptor
      * HttpInterceptorFn injects Bearer token automatically
      * Centralized auth management for all requests

    - add tests

    - Infrastructure
      * Mise tasks: database:seed, frontend:tests:e2e
      * Localhost configuration for E2E tests

    - FilesComponent
      * Empty state with upload buttons
      * FileUploadModalComponent integration
      * Toolbar with user info and logout

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -21,6 +21,9 @@ yarn-error.log
 testem.log
 /typings
 __screenshots__/
+playwright-report/
+test-results/
+*.png
 
 # Cypress
 cypress-results.json
