--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,11 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:ci": "ng test --no-watch --browsers=ChromeHeadlessCI",
-    "test:coverage": "ng test --no-watch --code-coverage --browsers=ChromeHeadlessCI"
+    "test:coverage": "ng test --no-watch --code-coverage --browsers=ChromeHeadlessCI",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui",
+    "e2e:headed": "playwright test --headed",
+    "e2e:debug": "playwright test --debug"
   },
   "prettier": {
     "printWidth": 100,
@@ -24,6 +28,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.3.12",
     "@angular/cdk": "^20.2.13",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
@@ -37,9 +42,10 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.8",
+    "@angular/build": "^20.3.10",
     "@angular/cli": "^20.3.8",
     "@angular/compiler-cli": "^20.3.0",
+    "@playwright/test": "^1.56.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
