fix(historic): consultation historique
       - fix download_url parameter
       - add mimeType to backend response
       - set /api/files/download/** api endpoint to public
       - fix Upload button behaviour on invalid form

--- a/backend/.env.cors
+++ b/backend/.env.cors
@@ -1,4 +1,4 @@
 # Configuration CORS - Liste des origines autorisées séparées par des virgules
 # Développement local
-export CORS_ALLOWED_ORIGINS=http://$(hostname -I | awk '{print $1}'):4200
+export CORS_ALLOWED_ORIGINS=http://$(hostname -I | awk '{print $1}'):4200,http://localhost:4200
 
