test(frontend): add tests
      - Added unit tests for the new frontend components :
        - file-card component unit tests
        - home component unit tests
        - file component unit tests
        - file history e2e tests
        - login e2e tests
        - account creation e2e tests
      - normalized tests data

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -94,6 +94,9 @@
             ],
             "styles": [
               "src/styles.css"
+            ],
+            "codeCoverageExclude": [
+              "src/app/core/models/**/*.ts"
             ]
           }
         }
