--- a/frontend/tsconfig.spec.json
+++ b/frontend/tsconfig.spec.json
@@ -9,6 +9,9 @@
     ]
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.spec.ts"
+  ],
+  "exclude": [
+    "src/app/core/models/**/*.spec.ts"
   ]
 }
