--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@angular/material": "^20.2.13",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "lighthouse": "^13.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
