--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:${PG_VERSION:-16.1-alpine}
+    image: postgres:${PG_VERSION:-16.11-alpine}
     environment:
       POSTGRES_DB: ${DB_NAME:-datashare}
       POSTGRES_USER: ${DB_USER:-db_user}
@@ -56,7 +56,7 @@ services:
         condition: service_healthy
 
   rproxy:
-    image: nginx:latest
+    image: nginx:trixie-perl
     ports:
       - "80:80"
       - "443:443"
